--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,10 @@
 plugins {
     id 'java'
-    id "io.freefair.lombok" version "8.6"
 }
 
-group 'ru.netology'
-version '1.0-SNAPSHOT'
+
+group = 'ru.netology'
+version = '1.0-SNAPSHOT'
 
 sourceCompatibility = 11
 compileJava.options.encoding = "UTF-8"
@@ -15,17 +15,15 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.0'
-    testImplementation 'com.codeborne:selenide:6.17.2'
-    testImplementation 'com.github.javafaker:javafaker:1.0.2'
-    compileOnly 'org.projectlombok:lombok:1.18.24'
-    annotationProcessor 'org.projectlombok:lombok:1.18.24'
-    runtimeOnly 'org.slf4j:slf4j-simple:2.0.3'
-    testImplementation 'io.rest-assured:rest-assured:5.3.0'
-    testImplementation 'com.google.code.gson:gson:2.10.1'
+    testImplementation "org.junit.jupiter:junit-jupiter:5.8.2"
+    testImplementation 'com.codeborne:selenide:6.17.1'
+    testImplementation 'org.slf4j:slf4j-simple:1.7.32'
+    testCompileOnly 'org.projectlombok:lombok:1.18.28'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.28'
 }
 
 test {
     useJUnitPlatform()
     systemProperty 'selenide.headless', System.getProperty('selenide.headless')
+    systemProperty 'chromeoptions.prefs', System.getProperty('chromeoptions.prefs', "profile.password_manager_leak_detection=false")
 }
